<resources>
    <!-- GENERAL -->
    <string name="app_name">Authorio</string>

    <!-- MAIN -->
    <string name="welcomeMain">Welcome to Authorio, %s!</string>

    <!-- LOGIN -->
    <string name="namePlaceholder">Name</string>
    <string name="surnamePlaceholder">Surname</string>
    <string name="emailPlaceholder">Email</string>
    <string name="passwordPlaceholder">Password</string>

    <string name="buttonLogInText">Log In</string>
    <string name="buttonSignUpText">Sign Up</string>

    <!-- WARNINGS -->
    <string name="appError">Error in app</string>
    <string name="userNotFound">User not found</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="shortPassword">Too short password</string>
    <string name="nameIsEmpty">Name is empty</string>
    <string name="surnameIsEmpty">Surname is empty</string>
    <string name="emailIsEmpty">Email is empty</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="emailIsExists">Email is exists</string>
    <string name="serverError">Server error</string>

    <!-- MAIN -->
    <string name="authorListText">Authors:</string>
    <string name="nullPlaceholder">No items</string>
    <string name="lostConnection">We are lost connection...\nSorryyy</string>

    <!-- SEARCH -->
    <string name="search">Book, library or user</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="changeProfile">Change</string>
    <string name="logOut">Log out</string>
    <string name="books">Books</string>
    <string name="notes">Notes</string>

    <!-- INFO -->
    <string name="lovers">followers</string>
    <string name="changeProfileText">Change your profile</string>
    <string name="descriptionPlaceholder">Description</string>
    <string name="changePasswordText">Change password</string>
    <string name="saveChanges">Save changes</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="passwordsAreSame">Password are the same</string>
    <string name="successfulPasswordEdit">Password changed</string>
    <string name="title">Title</string>
    <string name="addBookText">Add book</string>
    <string name="tagsText">Tags(to 10)</string>
    <string name="add">Add</string>
    <string name="emptyEntries">Empty fileds</string>
    <string name="tooManyTags">Too many tags</string>
    <string name="noteText">Note text...</string>
    <string name="upload">Upload</string>
</resources>