<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textBookErrors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/second_pink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <EditText
        android:id="@+id/editBookTitle"
        android:layout_width="295dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <EditText
        android:id="@+id/editTags"
        android:layout_width="0dp"
        android:layout_height="161dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/tagsText"
        android:inputType="textMultiLine|textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editBookTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editBookTitle"
        app:layout_constraintTop_toBottomOf="@+id/editBookDescription" />

    <EditText
        android:id="@+id/editBookDescription"
        android:layout_width="0dp"
        android:layout_height="161dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/descriptionPlaceholder"
        android:inputType="textMultiLine|textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editBookTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editBookTitle"
        app:layout_constraintTop_toBottomOf="@+id/editBookTitle" />

    <TextView
        android:id="@+id/textAddBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addBookText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editBookTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/editTags"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTags"
        app:layout_constraintTop_toBottomOf="@+id/editTags" />
</androidx.constraintlayout.widget.ConstraintLayout>