<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/authorPhotoCP"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/editDescription"
        app:layout_constraintEnd_toEndOf="@+id/textChangeProfile"
        app:layout_constraintStart_toStartOf="@+id/textChangeProfile"
        app:layout_constraintTop_toBottomOf="@+id/textChangeProfile"
        app:layout_constraintVertical_bias="0.152"
        app:shapeAppearanceOverlay="@style/roundedImage" />

    <TextView
        android:id="@+id/textChangeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/changeProfileText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNameCP"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/namePlaceholder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textChangeProfile"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textChangeProfile" />

    <EditText
        android:id="@+id/editSurnameCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/surnamePlaceholder"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/editNameCP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="@+id/textChangeProfile"
        app:layout_constraintTop_toTopOf="@+id/editNameCP"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="0dp"
        android:layout_height="152dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descriptionPlaceholder"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/editSurnameCP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNameCP"
        app:layout_constraintTop_toBottomOf="@+id/editNameCP" />

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/second_pink"
        android:text="@string/changePasswordText"
        app:layout_constraintEnd_toEndOf="@+id/editDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editDescription"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <Button
        android:id="@+id/buttonSaveChanges"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/saveChanges"
        app:layout_constraintEnd_toEndOf="@+id/buttonChangePassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>