<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".write.WriteFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:elevation="12dp"
        app:cardCornerRadius="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007">

        <ImageView
            android:id="@+id/authorPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_launcher_foreground" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/authorNameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Android"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.369" />

    <TextView
        android:id="@+id/authorDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="description"
        app:layout_constraintEnd_toEndOf="@+id/authorNameInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/authorNameInfo"
        app:layout_constraintTop_toBottomOf="@+id/authorNameInfo" />

    <Button
        android:id="@+id/buttonChangeProfile"
        android:layout_width="125dp"
        android:layout_height="43dp"
        android:text="@string/changeProfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/authorDescription"
        app:layout_constraintVertical_bias="0.066" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeProfile"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="87dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/second_pink"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/logOut"
        app:layout_constraintBottom_toBottomOf="@+id/authorNameInfo"
        app:layout_constraintStart_toEndOf="@+id/authorNameInfo"
        app:layout_constraintTop_toTopOf="@+id/authorNameInfo"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/books" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/itemsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>